--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ position: fixed;
     .cat-ship{
         display: none;
         visibility: hidden;
+        height: 100vh;
     }
 }
 
@@ -93,6 +94,7 @@ position: fixed;
         justify-content: center;
         align-content: center;
         max-width: 100%;
+        height: 100vh;
     }
 }
 
